# realsense-apple-arm

./: .gitignore  README.md  SETUP_MACOS.md  realsense_test  realsense_test.c  realsense_test.cpp  realsense_wrapper.pyx  simple_example.py
.github/workflows/: python-package-conda.yml  python-publish.yml
cpp_test/: CMakeLists.txt
examples/: README.md  example.py  hand_visualization.py  simple_depth.py
examples/realsense_gui_core/: gui.py  realsense_core.py
realsense_python/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
realsense_python/examples/: example.py
realsense_python/src/realsense/: wrapper.pyx
