[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29.0", "numpy>=1.19.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realsense-applesilicon"
description = "Python wrapper for Intel RealSense cameras on Apple Silicon"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "James Ball", email = "James@istarirobotics.com"},
]
dependencies = [
    "numpy>=1.19.0,<2.0.0",
    "opencv-python>=4.5.0,<5.0.0",
    "cython>=0.29.0,<1.0.0",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools_scm]
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
local_scheme = "no-local-version"
